--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -1,5 +1,8 @@
 .products-details {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
+}
+.product-content h3 {
+  width: 600px;
 }
