--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -2,6 +2,8 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  border-bottom: 1px solid #cecece;
+  padding: 20px 1px;
 }
 .product-content h3 {
   width: 600px;
