--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -24,4 +24,15 @@
   grid-template-columns: auto auto;
   grid-gap: 10px;
   font-weight: 600;
+  cursor: pointer;
+}
+.search-field {
+  text-align: center;
+  background: #444;
+  padding: 30px;
+}
+.search-field input {
+  width: 50%;
+  height: 30px;
+  padding: 0px 20px;
 }
