--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -1,13 +1,21 @@
-.products-details {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  border-bottom: 1px solid #737373;
-  padding: 20px 1px;
+.product{
+    display: flex;
+    border-bottom: 1px solid lightgray;
+    margin-right: 5px;
+    padding-bottom: 5px;
 }
-.product-content h3 {
-  width: 600px;
+.product-name{
+    color: blue;
+    font-weight: 400;
 }
-.rating {
-  color: #fdbc65;
+.btn-regular{
+    background-color: goldenrod;
+    width: 150px;
+    height: 25px;
+    border: 1px solid gray;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.icon-color{
+    color: gold;
 }
