--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -1,38 +1,17 @@
-.main-shop {
-  display: grid;
-  grid-template-columns: 3fr 1fr;
+.search-container{
+    background-color: rgba(0, 0, 0, 0.85);
+    text-align: center;
+    line-height: 40px;
 }
-.shop-container {
-  border-right: 1px solid #737373;
+.search-container input{
+    width: 75%;
 }
-.cart-container {
-  padding: 20px;
-  text-align: center;
-  position: fixed;
-  right: 7%;
-  background: #fdbc65;
-  text-align: left;
-  border: 2px solid #737373;
-  border-radius: 10px;
+.shop-container{
+    display: grid;
+    grid-template-columns: 3fr 1fr;
 }
-.product-content button {
-  background: #fdbc65;
-  padding: 10px;
-  border: none;
-  border-radius: 5px;
-  display: grid;
-  grid-template-columns: auto auto;
-  grid-gap: 10px;
-  font-weight: 600;
-  cursor: pointer;
-}
-.search-field {
-  text-align: center;
-  background: #444;
-  padding: 30px;
-}
-.search-field input {
-  width: 50%;
-  height: 30px;
-  padding: 0px 20px;
+.product-container{
+    border-right: 1px solid lightgray;
+    margin-right: 5px;
+    margin-left: 50px;
 }
